--- a/react-practice/05-antd-todolist/package.json
+++ b/react-practice/05-antd-todolist/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^4.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "redux": "^4.0.5",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
