--- a/react-practice/06-antd-todolist/package.json
+++ b/react-practice/06-antd-todolist/package.json
@@ -21,6 +21,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
