--- a/react-practice/11-ultraui/package.json
+++ b/react-practice/11-ultraui/package.json
@@ -11,9 +11,20 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
+    "@huayun/ultraui": "^2.1.8",
     "babel-loader": "8.1.0",
+    "css-loader": "3.3.0",
+    "file-loader": "^6.1.1",
+    "less": "3.12.0",
+    "less-loader": "5.0.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-intl": "^5.8.6",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "style-loader": "1.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "3.10.0",
     "webpack-cli": "^4.0.0",
     "webpack-dev-server": "2.9.7"
